drbd-9.0.25-2/drbd/.compat_test.4.18.20/have_bio_bi_error.stderr
<command-line>:0:0: warning: "KBUILD_MODNAME" redefined
<command-line>:0:0: note: this is the location of the previous definition
/root/Code/All/drbd-9.0.25-2/drbd/drbd-kernel-compat/tests/have_bio_bi_error.c: In function ‘dummy’:
/root/Code/All/drbd-9.0.25-2/drbd/drbd-kernel-compat/tests/have_bio_bi_error.c:5:7: error: ‘struct bio’ has no member named ‘bi_error’; did you mean ‘bi_iter’?
  bio->bi_error = -EIO;
       ^~~~~~~~
       bi_iter
